# PrototypeHighlyLoadedDistributedService

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
documentation/: mkdocs.yml
documentation/docs/: changelog.md  index.md  running_project_local.md  running_project_prod.md
documentation/docs/about/: diagrams.md  overview.md  tech-stack.md
documentation/docs/changelog/: index.md  storefront-backend.md  storefront-frontend.md
documentation/docs/guides/: quickstart.md
storefront_catalog_service/: .dockerignore  Dockerfile  pyproject.toml
storefront_catalog_service/app/: manage.py
storefront_catalog_service/app/apps/users/: admin.py  backends.py  bl.py  managers.py  models.py  serializers.py  urls.py  views.py
storefront_catalog_service/app/apps/users/migrations/: 0001_initial.py  0002_otpcode.py
storefront_catalog_service/app/core/: urls.py
storefront_catalog_service/app/orm/: __init__.py  field_options.py  mixins.py  serializer_fields.py
storefront_catalog_service/app/settings/: settings.py
storefront_catalog_service_frontend/: README.md
storefront_catalog_service_frontend/app/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json
