[project]
name = "storefront-catalog-service"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django~=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "djangorestframework~=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "psycopg[binary]>=3.3.2",
    "python-decouple>=3.8",
    "sentry-sdk[django]>=2.52.0",
]
